--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -443,3 +443,11 @@
 		</script>
 	</body>
 </html>
+<!--Joke of the day:
+Why did the tomato turn red?
+Because it saw the salad dressing!
+-->
+<!-- Joke of the week
+Why did the scarecrow win an award?
+Because he was outstanding in his field!
+-->
